--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "fs": "0.0.1-security",
     "mongoose": "^5.9.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
